center align if less than 1 elemnt; remove back button on screen one; and next button on screen 5; fixed bug on step 5;

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -339,3 +339,8 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 		}
 	}
 }
+
+.centerAlign {
+	text-align: center;
+	margin: 0 auto;
+}
